# awx-without-k8s

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ISOLATED.md  POSTGRES-11-to-12.md  README.md  UPGRADE.md  awx.yml  galaxy.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-ansible-ai-connect-operator.yml  build-awx-ee.yml  build-awx-operator.yml  build-awx-resource-operator.yml  build-awx.yml  build-eda-de.yml  build-eda-server-operator.yml  build-eda.yml  build-ee-image.yml  build-ee.yml  build-gateway.yml  build-images.yml  build-mcp-server.yml  build-mcp.yml  lint.yml  publish-ee.yml  publish.yml
charts/ap-gateway-operator/: Chart.yaml  values.yaml
charts/awx-operator/: Chart.yaml  values.yaml
charts/awx-resource-operator/: Chart.yaml  values.yaml
charts/eda-server-operator/: Chart.yaml  values.yaml
charts/mcp-operator/: Chart.yaml  values.yaml
demo/: ansible.cfg  demo.yml  inventory  inventory-auto-peers  inventory-awx-standalone  inventory-eda-standalone  inventory-gateway  inventory-manual-peers  playbook-awx-standalone.yml  playbook-eda-standalone.yml  playbook-gateway.yml
demo/host_vars/: awx-1.demo.io.yml  awx-2.demo.io.yml  awx-receptor-1.demo.io.yml  awx-receptor-2.demo.io.yml  awx-receptor-3.demo.io.yml  (+2 more)
docker/: Dockerfile.awx-ee
ee/: execution-environment.yml
group_vars/: all.yml
images/awx/: Dockerfile  (+5 more)
inventory/: demo  demo-with-isolated
meta/: runtime.yml
playbooks/: site.yml
scripts/: receptor_keypair.sh
vars/: add-isolated-awx-key.yml  add-isolated-external-keys.yml  demo.yml
(+311 files in other folders)
