[tool.poetry]
name = "awx-without-k8s"
version = "0.1.0"
description = ""
authors = ["Tadas Sutkaitis <tadasas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "<2.19.0"
netaddr = "^1.3.0"
jmespath = "^1.1.0"
pre-commit = "^4.5.1"
ansible-lint = "25.6.1"
ansible-builder = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
